fix : overflow-x hidden이 제대로 적용되지 않는 문제 수정

--- a/src/Home.scss
+++ b/src/Home.scss
@@ -2,13 +2,14 @@
 
 
 
-.flex-wrapper {
+.wrapper {
     @include style-blueblack();
     text-align: center;
     display: flex;
     flex-wrap: nowrap;
     flex-direction:column;
-    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .flex-wrapper__intro {
